[gd_scene load_steps=6 format=3 uid="uid://6f3hygpsdmwo"]

[ext_resource type="Script" path="res://src/entities/player/player.gd" id="1_40d6q"]
[ext_resource type="PackedScene" uid="uid://dl4l2iyufxhx5" path="res://src/entities/player/stomp.tscn" id="2_3cbko"]
[ext_resource type="Texture2D" uid="uid://bvwwp5iadwa6r" path="res://assets/UI/PlayerCircle.png" id="3_1dsxc"]
[ext_resource type="Texture2D" uid="uid://cfml2s5pah8fq" path="res://assets/UI/PlayerCircleFull.png" id="4_hlnl2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ow4od"]
radius = 128.25

[node name="Player" type="Node2D"]
script = ExtResource("1_40d6q")
_stomp_scene = ExtResource("2_3cbko")

[node name="DottedCircle" type="Sprite2D" parent="."]
unique_name_in_owner = true
modulate = Color(1, 0.682353, 0.254902, 1)
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_1dsxc")

[node name="HideElement" type="Node2D" parent="."]
unique_name_in_owner = true
visible = false

[node name="Detector" type="Area2D" parent="HideElement"]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HideElement/Detector"]
shape = SubResource("CircleShape2D_ow4od")

[node name="Arrow" type="Polygon2D" parent="HideElement"]
unique_name_in_owner = true
position = Vector2(-1.13687e-13, -3.55271e-15)
scale = Vector2(2.99778, 1)
color = Color(1, 0.682353, 0.254902, 1)
polygon = PackedVector2Array(40.3632, -64, 56.0414, 3.55271e-15, 40.3632, 65, 44.0325, 3.55271e-15)

[node name="FullCircle" type="Sprite2D" parent="HideElement"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.392157)
self_modulate = Color(1, 0.683837, 0.255823, 1)
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_hlnl2")

[node name="StompTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true
